Few cleanups over the code and use more Java 9+ features (#2248)
* Few cleanups over the code and use more Java 9+ features

* Address feedback

* cleanup switch case

* Remove TODO