@@ -33,31 +33,19 @@ import com.sk89q.worldedit.world.registry.BundledBlockRegistry;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 
 public class CLIBlockRegistry extends BundledBlockRegistry {
 
     private Property<?> createProperty(String type, String key, List<String> values) {
-        switch (type) {
-            case "int": {
-                List<Integer> fixedValues = values.stream().map(Integer::parseInt).collect(Collectors.toList());
-                return new IntegerProperty(key, fixedValues);
-            }
-            case "bool": {
-                List<Boolean> fixedValues = values.stream().map(Boolean::parseBoolean).collect(Collectors.toList());
-                return new BooleanProperty(key, fixedValues);
-            }
-            case "enum": {
-                return new EnumProperty(key, values);
-            }
-            case "direction": {
-                List<Direction> fixedValues = values.stream().map(String::toUpperCase).map(Direction::valueOf).collect(Collectors.toList());
-                return new DirectionalProperty(key, fixedValues);
-            }
-            default:
-                throw new RuntimeException("Failed to create property");
-        }
+        return switch (type) {
+            case "int" -> new IntegerProperty(key, values.stream().map(Integer::parseInt).toList());
+            case "bool" -> new BooleanProperty(key, values.stream().map(Boolean::parseBoolean).toList());
+            case "enum" -> new EnumProperty(key, values);
+            case "direction" ->
+                new DirectionalProperty(key, values.stream().map(String::toUpperCase).map(Direction::valueOf).toList());
+            default -> throw new RuntimeException("Failed to create property");
+        };
     }
 
     @Nullable
