@@ -52,9 +52,9 @@ public final class SubCommandPermissionCondition extends PermissionCondition {
         }
 
         public Command.Condition build() {
-            final List<Command.Condition> conditions = subCommands.stream().map(Command::getCondition).collect(Collectors.toList());
-            final List<Optional<PermissionCondition>> permConds = conditions.stream().map(c -> c.as(PermissionCondition.class)).collect(Collectors.toList());
-            if (permConds.stream().anyMatch(o -> !o.isPresent())) {
+            final List<Command.Condition> conditions = subCommands.stream().map(Command::getCondition).toList();
+            final List<Optional<PermissionCondition>> permConds = conditions.stream().map(c -> c.as(PermissionCondition.class)).toList();
+            if (permConds.stream().anyMatch(Optional::isEmpty)) {
                 // if any sub-command doesn't require permissions, then this command doesn't require permissions
                 return new PermissionCondition(ImmutableSet.of());
             }
